--- a/深度学习笔记/大模型/大模型推理框架.rst
+++ b/深度学习笔记/大模型/大模型推理框架.rst
@@ -8,6 +8,7 @@
 +-------------+--------------------------------------------------------+----------------------------------------------------------------------------------------------+
 | llama.onnx  | https://github.com/tpoisonooo/llama.onnx               | 导出的onnx在cpu上正常运行，                                                                  |
 |             |                                                        | 但onnx转tensorrt后数据不一致：https://github.com/NVIDIA/TensorRT/issues/2928                 |
+|             |                                                        | chatglm实现https://github.com/vllm-project/vllm/pull/649                                     |
 +-------------+--------------------------------------------------------+----------------------------------------------------------------------------------------------+
 | ChatGLM-MNN | https://github.com/wangzhaode/ChatGLM-MNN              | 一个基于 MNN 的 ChatGLM-6B C++ 推理实现，支持根据显存大小自动分配计算任务给 GPU 和 CPU       |
 +-------------+--------------------------------------------------------+----------------------------------------------------------------------------------------------+
@@ -30,3 +31,5 @@
 
 
 https://mp.weixin.qq.com/s/xIbNSAI9cKGIA19yZhIEgg
+
+https://mp.weixin.qq.com/s/e-3qkkAY3vpAnFlSNviotg
