--- a/C++笔记/多进程.rst
+++ b/C++笔记/多进程.rst
@@ -3,6 +3,27 @@
 多进程
 ====================
 
+进程内存布局
+-------------------------------
+Linux进程的内存布局，其包括以下几个部分：
+
+1. **内核空间（Kernel Space）**：用于操作系统内核使用的内存空间，包括系统调用以及驱动程序等。
+2. **用户空间（User Space）**：应用程序使用的内存空间，包括代码区、数据区和堆区等。
+   
+   - **代码区（Text Segment）**：存放可执行程序的机器指令，是只读的。
+   - **数据区（Data Segment）**：存放已初始化的全局变量和静态变量等。
+
+3. **BSS区（Block Started by Symbol）**：存放未初始化的全局变量和静态变量等，在程序启动时会被清零。
+4. **堆区（Heap）**：用于动态分配内存，例如通过malloc()和free()函数进行管理。
+5. **栈区（Stack）**：用于存储函数调用过程中的局部变量、返回地址和函数调用的上下文等信息，栈的创建和销毁由操作系统负责。
+
+此外，还有一些其他内存映射区域，如共享库区域（Shared Libraries）和内存映射文件区域（Memory-mapped Files）。
+
+.. image:: /images/C++/多进程.jpg
+    :width: 3600px
+
+
+
 进程创建
 -------------------
 
