--- a/设计模式/适配器模式.rst
+++ b/设计模式/适配器模式.rst
@@ -17,6 +17,10 @@
 适配器模式(Adapter Pattern) ：将一个接口转换成客户希望的另一个接口，适配器模式使接口不兼容的那些类可以一起工作，
 其别名为包装器(Wrapper)。适配器模式既可以作为类结构型模式，也可以作为对象结构型模式。
 
+1. 类适配器：类适配器使用多重继承，同时继承需要适配的类和目标接口。适配器类实现目标接口，并将其方法调用转发给被适配的类。
+2. 对象适配器：对象适配器使用组合将适配器类与被适配的类关联起来。适配器类实现目标接口，并在其内部创建一个被适配类的对象，将目标接口的方法调用转发给被适配类对象。
+3. 接口适配器：接口适配器也称为缺省适配器模式，它通过定义一个抽象适配器类，该类实现目标接口但为空。然后具体的适配器类可以选择性地覆盖适配器类的方法，避免在每个适配器类中都需要实现所有的方法。
+
 模式结构
 --------------
 
