--- a/深度学习笔记/深度学习编译之图优化.rst
+++ b/深度学习笔记/深度学习编译之图优化.rst
@@ -11,6 +11,14 @@
 2. 公共子表达式消除
 3. 代数化简
 4. 算子融合
+5. 冗余节点消除
+6. 算子替换
+7. 算子前移
+
+
+8. Basic:基础优化涵盖了所有保留计算图语义的修改，如：O1常量折叠，O2冗余节点消除，O3有限数量的算子融合
+9. Extended:扩展优化仅在运行特定后端，如CPU、CUDA、NPU后端执行提供程序时适用。其针对硬件进行特殊且复杂的kernel融合策略和方法
+10. Layout&Memory:布局转换优化，主要是不同AI框架，在不同的硬件后端训练，又在不同的硬件后端执行，数据的存储和排布格式不同。
 
 
 常量折叠
