--- a/C++笔记/多进程.rst
+++ b/C++笔记/多进程.rst
@@ -994,12 +994,17 @@ http://www.vishalchovatiya.com/semaphore-between-processes-example-in-c/
 
 内存映射（Memory Map）
 `````````````````````````````
-
 将文件或设备映射到进程的内存中。读取或写入那些内存区域会导致文件被读取或写入。
 
-使用内存映射，避免在用户空间，内核空间缓冲区和缓冲区高速缓存之间进行多次复制。
+**效率** :
 
-内存映射方便对大文件的某一部分进行读取或修改。
+从代码层面上看，从硬盘上将文件读入内存，都要经过文件系统进行数据拷贝，并且数据拷贝操作是由文件系统和硬件驱动实现的，理论上来说，拷贝数据的效率是一样的。
+但是通过内存映射的方法访问硬盘上的文件，效率要比read和write系统调用高，这是为什么呢？
+原因是read()是系统调用，其中进行了数据拷贝，它首先将文件内容从硬盘拷贝到内核空间的一个缓冲区，然后再将这些数据拷贝到用户空间，在这个过程中，实际上完成了 两次数据拷贝。
+
+而mmap()也是系统调用，mmap()中没有进行数据拷贝，真正的数据拷贝是在缺页中断处理时进行的，由于mmap()将文件直接映射到用户空间，所以中断处理函数根据这个映射关系，直接将文件从硬盘拷贝到用户空间，只进行了 一次数据拷贝 。因此，内存映射的效率要比read/write效率高。
+
+**好处** ：内存映射方便对大文件的某一部分进行读取或修改。
 
 **mmap**：将文件内容映射到内存中。映射到内存后，返回起始地址
 
@@ -1115,7 +1120,7 @@ http://www.vishalchovatiya.com/semaphore-between-processes-example-in-c/
     return;
     }
 
-
+参考：https://zhuanlan.zhihu.com/p/143270729
 
 
 套接字（socket）
