--- a/C++笔记/多进程和多线程.rst
+++ b/C++笔记/多进程和多线程.rst
@@ -24,19 +24,19 @@
 ---------------------------------------------
 考察点：
 
-1. 理论知识：对多线程和多进程的理解，能解释其优点和缺点
-2. 实际经验：展示过去在真实项目中如何应用这些概念，以及遇到的挑战和如何解决的。
-3. 决策能力：展示如何在特定情况下进行决策，比如何时选择多线程，何时选择多进程，并能对此进行合理的解释。
-4. 性能考虑: 了解和能够解释多线程和多进程如何影响应用的性能，如内存使用、CPU使用、上下文切换的开销等。
+1. **理论知识：** 对多线程和多进程的理解，能解释其优点和缺点
+2. **实际经验：** 展示过去在真实项目中如何应用这些概念，以及遇到的挑战和如何解决的。
+3. **决策能力：** 展示如何在特定情况下进行决策，比如何时选择多线程，何时选择多进程，并能对此进行合理的解释。
+4. **性能考虑：** 了解和能够解释多线程和多进程如何影响应用的性能，如内存使用、CPU使用、上下文切换的开销等。
 
 回答角度:
 
-1. 资源使用: 讨论多线程和多进程对系统资源（如CPU，内存，IO）的使用情况，并考虑在你的特定应用中哪种方式更有效。
-2. 并发性: 评估你的应用是否需要高并发，以及并发的粒度。大量的小任务可能更适合多线程，而独立且消耗资源较大的任务可能更适合多进程。
-3. 数据共享与通信: 考虑你的应用中的数据共享需求。多线程更容易共享数据，而多进程需要复杂的IPC机制。
-4. 错误处理和恢复: 如果你的应用的一个部分失败，应如何处理？多进程的隔离性可能会帮助错误恢复，而多线程可能需要更复杂的错误处理策略。
-5. 程序的结构和维护: 多线程可能需要更复杂的同步和互斥机制，这可能使得代码更难编写和维护。考虑在你的应用中这是否会成为问题。
-6. 开销与性能: 多线程的上下文切换开销小于多进程，但过多的线程也会导致调度开销增加。权衡这两者以达到最佳性能。
+1. **资源使用:** 讨论多线程和多进程对系统资源（如CPU，内存，IO）的使用情况，并考虑在你的特定应用中哪种方式更有效。
+2. **并发性:** 评估你的应用是否需要高并发，以及并发的粒度。大量的小任务可能更适合多线程，而独立且消耗资源较大的任务可能更适合多进程。
+3. **数据共享与通信:** 考虑你的应用中的数据共享需求。多线程更容易共享数据，而多进程需要复杂的IPC机制。
+4. **错误处理和恢复:** 如果你的应用的一个部分失败，应如何处理？多进程的隔离性可能会帮助错误恢复，而多线程可能需要更复杂的错误处理策略。
+5. **程序的结构和维护:** 多线程可能需要更复杂的同步和互斥机制，这可能使得代码更难编写和维护。考虑在你的应用中这是否会成为问题。
+6. **开销与性能:** 多线程的上下文切换开销小于多进程，但过多的线程也会导致调度开销增加。权衡这两者以达到最佳性能。
 
 简短回复
 ```````````
@@ -59,13 +59,13 @@
 
 1. **数据共享和通信：** 线程之间可以轻易地共享数据，它们位于同一进程空间，可以直接访问彼此的堆和全局变量。
    另一方面，进程拥有各自独立的内存空间，所以它们之间的通信（如IPC，包括管道、消息队列、信号量等）需要更多的开销。
-2. **安全性和隔离性：**因为进程有独立的内存空间，所以一个进程崩溃并不会直接影响到其他进程。
+2. **安全性和隔离性：** 因为进程有独立的内存空间，所以一个进程崩溃并不会直接影响到其他进程。
    但在多线程的情况下，一个线程的崩溃可能会影响到位于同一进程中的其他线程。
-3. **资源使用：**多进程需要的资源（包括内存、文件句柄等）通常会比多线程更多。
+3. **资源使用：** 多进程需要的资源（包括内存、文件句柄等）通常会比多线程更多。
    这是因为每个进程都需要有自己的独立执行环境（包括代码、系统变量、环境变量等）。然而，多线程只需要共享一些这样的资源。
-4. **切换开销：**线程切换的开销小于进程切换的开销。线程切换仅涉及寄存器、程序计数器、栈指针等的存储和恢复，
+4. **切换开销：** 线程切换的开销小于进程切换的开销。线程切换仅涉及寄存器、程序计数器、栈指针等的存储和恢复，
    而进程切换还需要更换内存映射、刷新TLB等。
-5. **编程和调试复杂性：**多线程程序通常比多进程程序更复杂，需要更多的同步和互斥机制来避免条件竞争和死锁。
+5. **编程和调试复杂性：** 多线程程序通常比多进程程序更复杂，需要更多的同步和互斥机制来避免条件竞争和死锁。
    进程因为拥有独立的内存空间，编程和调试通常更简单些。
 
 综上，如果你的应用需要大量的并发数据处理并且要求低延迟，或者需要大量共享数据，那么多线程可能是更好的选择。
