--- a/C++笔记/模板编程.rst
+++ b/C++笔记/模板编程.rst
@@ -1224,6 +1224,14 @@
 
 
 
+函数模板-设计一个函数可以接收lambda,函数，函数对象作为参数
+------------------------------------------------------------------------------
+.. literalinclude:: code/template/func_templete1.cpp
+	:language: cpp
+	:linenos:
+
+
+
 参考
 -----------
 
