--- a/C++笔记/多线程.rst
+++ b/C++笔记/多线程.rst
@@ -3,6 +3,10 @@
 多线程
 ==============
 
+.. contents:: 文档目录
+  :local:
+  :depth: 2
+
 pthread(POSIX标准)
 -----------------------
 
@@ -354,7 +358,7 @@ ps：join和detach会将std::thread对象状态置为unjoinable的状态
 这个变量可以通过 **std::future** 提供的成员函数 **std::future::get()** 来得到。
 如果在这个变量被赋值之前就有别的线程试图通过 **std::future::get()** 获取这个变量，那么这个线程将会被阻塞到这个变量可以获取为止
 
-**std::promise**同样也是一个类模板，它的对象 **承诺** 会在未来设置变量(这个变量也就是**std::future**中的变量)。
+**std::promise** 同样也是一个类模板，它的对象 **承诺** 会在未来设置变量(这个变量也就是**std::future**中的变量)。
 每一个 **std::promise** 对象都有一个与之关联的 **std::future** 对象。
 当 **std::promise** 设置值的时候，这个值就会赋给 **std::future** 中的对象了。
 
@@ -1228,6 +1232,17 @@ mutex函数
 - std::try_lock，尝试同时对多个互斥量上锁。
 - std::lock，可以同时对多个互斥量上锁。
 - std::call_once，如果多个线程需要同时调用某个函数，call_once 可以保证多个线程对该函数只调用一次
+
+
+信号量
+`````````````````````
+信号量（Semaphore）：用于控制多个线程对共享资源的访问。
+信号量维护了一个计数器，可以允许多个线程同时访问共享资源，但是通过限制计数器的值来控制同时访问的线程数量。当信号量计数器为0时，线程需要等待其他线程释放资源。
+
+互斥锁（Mutex）：用于保护共享资源，一次只允许一个线程访问临界区。
+
+
+
 
 线程同步的四项原则
 `````````````````````
