--- a/深度学习笔记/大模型/大模型相关知识.rst
+++ b/深度学习笔记/大模型/大模型相关知识.rst
@@ -81,6 +81,11 @@ Multi-query Attention 与 Grouped-query Attention
 https://www.cnblogs.com/heyjjjjj/p/17488423.html
 
 
+gguf数据格式
+------------------------
+https://github.com/ggerganov/ggml/blob/master/docs/gguf.md
+
+
 
 参考
 -------------
