--- a/深度学习笔记/量化.rst
+++ b/深度学习笔记/量化.rst
@@ -348,6 +348,10 @@ SENSITIVITY-BASED NON-UNIFORM QUANTIZATION
 使用k-means方法将权重进行聚类，比如3bit则聚成8个类
 
 
+k-quants
+----------------------------
+https://github.com/ggerganov/llama.cpp/pull/1684
+
 其他论文
 ---------------------
 * Understanding and overcoming the challenges of efficient transformer quantization
