--- a/数据结构与算法/leecode/双指针.rst
+++ b/数据结构与算法/leecode/双指针.rst
@@ -266,6 +266,82 @@
             return ret;
     }
 
+合并两个有序数组
+----------------------------
+leetcode: https://leetcode.cn/problems/merge-sorted-array/?envType=study-plan-v2&envId=top-interview-150
 
+给你两个按 非递减顺序 排列的整数数组 nums1 和 nums2，另有两个整数 m 和 n ，分别表示 nums1 和 nums2 中的元素数目。
+请你 合并 nums2 到 nums1 中，使合并后的数组同样按 非递减顺序 排列。
 
+.. attention::
 
+    注意：最终，合并后数组不应由函数返回，而是存储在数组 nums1 中。为了应对这种情况，nums1 的初始长度为 m + n，其中前 m 个元素表示应合并的元素，后 n 个元素为 0 ，应忽略。nums2 的长度为 n 。
+
+.. tip::
+
+    逆向双指针法：观察可知，nums1的后半部分是空的，可以直接覆盖而不会影响结果。因此可以指针设置为从后向前遍历，每次取两者之中的较大者放进 nums1的最后面。
+
+.. literalinclude:: ./code/合并两个有序数组.cpp
+    :language: cpp
+
+移除元素
+------------------------
+leetcode: https://leetcode.cn/problems/remove-element/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个数组 nums 和一个值 val，你需要 原地 移除所有数值等于 val 的元素，并返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须仅使用 O(1) 额外空间并 原地 修改输入数组。
+
+元素的顺序可以改变。你不需要考虑数组中超出新长度后面的元素。
+
+.. tip::
+
+    使用双指针，两个指针初始时分别位于数组的首尾，向中间移动遍历该序列
+
+.. literalinclude:: ./code/移除元素.cpp
+    :language: cpp
+
+删除有序数组中的重复项
+------------------------------------
+leetcode: https://leetcode.cn/problems/remove-duplicates-from-sorted-array/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个 非严格递增排列 的数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。元素的 相对顺序 应该保持 一致 。然后返回 nums 中唯一元素的个数。
+
+考虑 nums 的唯一元素的数量为 k ，你需要做以下事情确保你的题解可以被通过：
+
+更改数组 nums ，使 nums 的前 k 个元素包含唯一元素，并按照它们最初在 nums 中出现的顺序排列。nums 的其余元素与 nums 的大小不重要。
+返回 k 。
+
+.. tip:
+
+    | 使用快慢指针。
+    | 如果数组 nums的长度为 0，则数组不包含任何元素，因此返回 0。
+    | 当数组 nums的长度大于 0时，数组中至少包含一个元素，在删除重复元素之后也至少剩下一个元素，因此 nums[0] 保持原状即可，从下标 1开始删除重复元素。
+    | 定义两个指针 fast和 slow分别为快指针和慢指针，快指针表示遍历数组到达的下标位置，慢指针表示下一个不同元素要填入的下标位置，初始时两个指针都指向下标 1。
+    | 假设数组 nums的长度为 n。将快指针 fast依次遍历从 1到 n-1的每个位置，对于每个位置，如果 nums[fast]!=nums[fast-1]，
+    | 说明 nums[fast]和之前的元素都不同，因此将 nums[fast]的值复制到 nums[slow]，然后将 slow的值加 1，即指向下一个位置。
+    | 遍历结束之后，从 nums[0]到 nums[slow-1]的每个元素都不相同且包含原数组中的每个不同的元素，因此新的长度即为 slow，返回 slow即可。
+
+.. literalinclude:: ./code/删除有序数组中的重复项.cpp
+    :language: cpp
+
+删除有序数组中的重复项2
+----------------------------------
+leetcode: https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/description/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使得出现次数超过两次的元素只出现两次 ，返回删除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+ .. tip:
+
+    | 因为给定数组是有序的，所以相同元素必然连续。我们可以使用双指针解决本题，遍历数组检查每一个元素是否应该被保留，如果应该被保留，就将其移动到指定位置。
+    | 具体地，我们定义两个指针 slow和 fast分别为慢指针和快指针，其中慢指针表示处理出的数组的长度，快指针表示已经检查过的数组的长度，
+    | 即 nums[fast]表示待检查的第一个元素，nums[slow-1]为上一个应该被保留的元素所移动到的指定位置。
+    | 因为本题要求相同元素最多出现两次而非一次，所以我们需要检查上上个应该被保留的元素 nums[slow-2]是否和当前待检查元素 nums[fast]相同。
+    | 当且仅当 nums[slow-2]=nums[fast]时，当前待检查元素 nums[fast]不应该被保留
+    |（因为此时必然有 nums[slow−2]=nums[slow−1]=nums[fast]）。最后，slow即为处理好的数组的长度。
+    | 特别地，数组的前两个数必然可以被保留，因此对于长度不超过 2 的数组，我们无需进行任何处理，对于长度超过 2 的数组，我们直接将双指针的初始值设为 2 即可。
+
+.. literalinclude:: ./code/删除有序数组中的重复项2.cpp
+    :language: cpp
