--- a/数据结构与算法/leecode/数据结构.rst
+++ b/数据结构与算法/leecode/数据结构.rst
@@ -134,6 +134,7 @@
 
 数组中出现次数超过一半的数字(众数)
 ```````````````````````````````````
+leetcode: https://leetcode.cn/problems/majority-element/?envType=study-plan-v2&envId=top-interview-150
 
 ::
 
@@ -158,32 +159,9 @@
     | 由于我们要找的数字出现的次数比其他所有数字出现的次数之和还要多，
     | 那么要找的数字肯定是最后一次把次数设置为1时对应的数字。
 
-.. code-block:: cpp
+.. literalinclude:: code/众数.cpp
+    :language: cpp
 
-    int MoreThanHalfNum_Solution(vector<int> numbers) {
-            if(numbers.size()==0) 
-                return 0;
-            int result = numbers[0];
-            int times = 1;
-            for(int i=1;i<numbers.size();i++){
-                if(times==0){
-                    result = numbers[i];
-                    times = 1;
-                }else if(numbers[i] == result)
-                    times++;
-                else
-                    times--;
-            }
-            //check the result
-            int count = 0;
-            for(int i=0;i<numbers.size();i++){
-                if(numbers[i] == result)
-                    count++;
-            }
-            if(count*2<=numbers.size())
-                return 0;
-            return result;
-    }
 
 最小的K个数
 ```````````````````
@@ -359,6 +337,20 @@
         }
     };
 
+旋转字符串/数组
+````````````````````
+leetcode: https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-interview-150
+
+字符串的左旋转操作是把字符串你前面的若干个字符转移到字符串的尾部。
+请定义一个函数实现字符串左旋转操作的功能。
+比如，输入字符串"abcdefg"和数字2，该函数将返回左旋转两位得到的结果"cdefgab"
+
+.. tip:: 
+
+    把字符串分为两个部分，分别翻转这两部分，再翻转整个字符串
+
+.. literalinclude:: code/旋转数组.cpp
+    :language: cpp
 
 
 链表
