--- a/数据结构与算法/leecode/刷题记录.rst
+++ b/数据结构与算法/leecode/刷题记录.rst
@@ -529,3 +529,24 @@
         }
         return res;
     }
+
+H 指数
+-----------------
+给你一个整数数组 citations ，其中 citations[i] 表示研究者的第 i 篇论文被引用的次数。计算并返回该研究者的 h 指数。
+
+h 指数的定义：h 代表“高引用次数” ，一名科研人员的 h 指数 是指他（她）至少发表了 h 篇论文，并且 至少 有 h 篇论文被引用次数大于等于 h 。
+如果 h 有多种可能的值，h 指数 是其中最大的那个。
+
+.. tip:: 
+
+    计数排序:
+
+    新建并维护一个数组 counter用来记录当前引用次数的论文有几篇。
+    根据定义，我们可以发现 H 指数不可能大于总的论文发表数，所以对于引用次数超过论文发表数的情况，我们可以将其按照总的论文发表数来计算即可。
+
+    最后我们可以从后向前遍历数组 counter，对于每个 0≤i≤n0，在数组 counter 中得到大于或等于当前引用次数i的总论文数。当我们找到一个 H指数时跳出循环，并返回结果。
+
+.. literalinclude:: code/H指数.cpp
+    :language: cpp
+
+
