--- a/深度学习笔记/大模型/大模型推理显存计算.rst
+++ b/深度学习笔记/大模型/大模型推理显存计算.rst
@@ -25,3 +25,25 @@ Qwen2-72B-Instruct占用显存大小
 8卡3090 总显存192G
 模型+kv cache可用显存173G
 kv cache可用显存29G; 对用单用户最大token数为11.5k
+
+
+
+Qwen2-7B-Instruct占用显存大小
+-------------------------------------------------
+"hidden_size": 3584,
+
+"num_hidden_layers": 28,
+
+
+1. 模型参数占用显存：
+    7B*2 = 14G
+2. 单个token kv cache：
+    hidden_size * 2 * 2 * num_hidden_layers= 0.4M
+3. 10k token长度，10用户：
+    2.5M*10k*10 = 250G
+4. 其他占用：（144+250）*0.1 = 39.4G
+5. 总计：434G
+
+1卡3090 总显存24G
+模型+kv cache可用显存21G
+kv cache可用显存7G; 对用单用户最大token数为17k
