--- a/数据结构与算法/leecode/刷题记录.rst
+++ b/数据结构与算法/leecode/刷题记录.rst
@@ -532,6 +532,8 @@
 
 H 指数
 -----------------
+leetcode: https://leetcode.cn/problems/h-index/description/?envType=study-plan-v2&envId=top-interview-150
+
 给你一个整数数组 citations ，其中 citations[i] 表示研究者的第 i 篇论文被引用的次数。计算并返回该研究者的 h 指数。
 
 h 指数的定义：h 代表“高引用次数” ，一名科研人员的 h 指数 是指他（她）至少发表了 h 篇论文，并且 至少 有 h 篇论文被引用次数大于等于 h 。
@@ -548,5 +550,27 @@ h 指数的定义：h 代表“高引用次数” ，一名科研人员的 h 指
 
 .. literalinclude:: code/H指数.cpp
     :language: cpp
+
+
+除自身以外数组的乘积
+---------------------------
+leetcode: https://leetcode.cn/problems/product-of-array-except-self/description/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个整数数组 nums，返回 数组 answer ，其中 answer[i] 等于 nums 中除 nums[i] 之外其余各元素的乘积 。
+
+题目数据 保证 数组 nums之中任意元素的全部前缀元素和后缀的乘积都在  32 位 整数范围内。
+
+请 不要使用除法，且在 O(n) 时间复杂度内完成此题。
+
+.. tip::
+
+    | 1. 初始化两个空数组 L 和 R。对于给定索引 i，L[i] 代表的是 i 左侧所有数字的乘积，R[i] 代表的是 i 右侧所有数字的乘积。
+    | 2. 我们需要用两个循环来填充 L 和 R 数组的值。对于数组 L，L[0] 应该是 1，因为第一个元素的左边没有元素。对于其他元素：L[i] = L[i-1] * nums[i-1]。
+    | 3. 同理，对于数组 R，R[length-1] 应为 1。length 指的是输入数组的大小。其他元素：R[i] = R[i+1] * nums[i+1]。
+    | 4. 当 R 和 L 数组填充完成，我们只需要在输入数组上迭代，且索引 i 处的值为：L[i] * R[i]。
+
+.. literalinclude:: code/除自身以外数组的乘积.cpp
+    :language: cpp
+
 
 
