--- a/数据结构与算法/leecode/双指针.rst
+++ b/数据结构与算法/leecode/双指针.rst
@@ -312,7 +312,7 @@ leetcode: https://leetcode.cn/problems/remove-duplicates-from-sorted-array/?envT
 更改数组 nums ，使 nums 的前 k 个元素包含唯一元素，并按照它们最初在 nums 中出现的顺序排列。nums 的其余元素与 nums 的大小不重要。
 返回 k 。
 
-.. tip:
+.. tip::
 
     | 使用快慢指针。
     | 如果数组 nums的长度为 0，则数组不包含任何元素，因此返回 0。
@@ -333,15 +333,31 @@ leetcode: https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/de
 
 不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
 
- .. tip:
+.. tip::
 
-    | 因为给定数组是有序的，所以相同元素必然连续。我们可以使用双指针解决本题，遍历数组检查每一个元素是否应该被保留，如果应该被保留，就将其移动到指定位置。
-    | 具体地，我们定义两个指针 slow和 fast分别为慢指针和快指针，其中慢指针表示处理出的数组的长度，快指针表示已经检查过的数组的长度，
+    | 因为给定数组是有序的，所以相同元素必然连续。我们可以使用双指针解决本题，遍历数组检查每一个元素是否应该被保留，如果应该被保留，就将其移动到指定位置。 
+    | 具体地，我们定义两个指针 slow和 fast分别为慢指针和快指针，其中慢指针表示处理出的数组的长度，快指针表示已经检查过的数组的长度， 
     | 即 nums[fast]表示待检查的第一个元素，nums[slow-1]为上一个应该被保留的元素所移动到的指定位置。
     | 因为本题要求相同元素最多出现两次而非一次，所以我们需要检查上上个应该被保留的元素 nums[slow-2]是否和当前待检查元素 nums[fast]相同。
-    | 当且仅当 nums[slow-2]=nums[fast]时，当前待检查元素 nums[fast]不应该被保留
-    |（因为此时必然有 nums[slow−2]=nums[slow−1]=nums[fast]）。最后，slow即为处理好的数组的长度。
+    | 当且仅当 nums[slow-2]=nums[fast]时，当前待检查元素 nums[fast]不应该被保留  
+    | （因为此时必然有 nums[slow−2]=nums[slow−1]=nums[fast]）。最后，slow即为处理好的数组的长度。
     | 特别地，数组的前两个数必然可以被保留，因此对于长度不超过 2 的数组，我们无需进行任何处理，对于长度超过 2 的数组，我们直接将双指针的初始值设为 2 即可。
 
 .. literalinclude:: ./code/删除有序数组中的重复项2.cpp
+    :language: cpp
+
+删除有序数组中的重复项N
+----------------------------------
+leetcode: https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/description/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使得出现次数超过k次的元素只出现k次 ，返回删除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+.. tip::
+
+    | 由于是保留 k 个相同数字，对于前 k 个数字，我们可以直接保留
+    | 对于后面的任意数字，能够保留的前提是：与当前写入的位置前面的第 k 个元素进行比较，不相同则保留
+
+.. literalinclude:: ./code/删除有序数组中的重复项N.cpp
     :language: cpp
