--- a/数据结构与算法/leecode/双指针.rst
+++ b/数据结构与算法/leecode/双指针.rst
@@ -361,3 +361,24 @@ leetcode: https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/de
 
 .. literalinclude:: ./code/删除有序数组中的重复项N.cpp
     :language: cpp
+
+
+接雨水
+----------------------------------
+leetcode: https://leetcode.cn/problems/trapping-rain-water/description/?envType=study-plan-v2&envId=top-interview-150
+
+给定 n 个非负整数表示每个宽度为 1 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
+
+.. tip::
+
+    | 维护两个指针 left 和 right，以及两个变量 leftMax 和 rightMax，初始时 left=0,right=n−1,leftMax=0,rightMax=0。指针 left 只会向右移动，指针 right 只会向左移动，在移动指针的过程中维护两个变量 leftMax 和 rightMax 的值。
+    | 当两个指针没有相遇时，进行如下操作：
+    | 使用 height[left] 和 height[right] 的值更新 leftMax 和 rightMax 的值；
+    | 如果 height[left]<height[right]，则必有 leftMax<rightMax，下标 left 处能接的雨水量等于 leftMax−height[left]，将下标 left 处能接的雨水量加到能接的雨水总量，然后将 left 加 1（即向右移动一位）；
+    | 如果 height[left]≥height[right]，则必有 leftMax≥rightMax，下标 right 处能接的雨水量等于 rightMax−height[right]，将下标 right 处能接的雨水量加到能接的雨水总量，然后将 right 减 1（即向左移动一位）。
+    | 当两个指针相遇时，即可得到能接的雨水总量。
+
+
+
+.. literalinclude:: ./code/接雨水.cpp
+    :language: cpp
