--- a/数据结构与算法/leecode/贪心算法.rst
+++ b/数据结构与算法/leecode/贪心算法.rst
@@ -32,3 +32,44 @@
 
 .. literalinclude:: code/跳跃游戏2.cpp
     :language: cpp
+
+
+分发糖果
+-----------------------
+n 个孩子站成一排。给你一个整数数组 ratings 表示每个孩子的评分。
+
+你需要按照以下要求，给这些孩子分发糖果：
+
+每个孩子至少分配到 1 个糖果。
+相邻两个孩子评分更高的孩子会获得更多的糖果。
+请你给每个孩子分发糖果，计算并返回需要准备的 最少糖果数目 。
+
+ 
+
+| 示例 1：
+| 输入：ratings = [1,0,2]
+| 输出：5
+| 解释：你可以分别给第一个、第二个、第三个孩子分发 2、1、2 颗糖果。
+|
+| 示例 2：
+| 输入：ratings = [1,2,2]
+| 输出：4
+| 解释：你可以分别给第一个、第二个、第三个孩子分发 1、2、1 颗糖果。第三个孩子只得到 1 颗糖果，这满足题面中的两个条件。
+
+.. tip:: 
+
+    我们可以将「相邻的孩子中，评分高的孩子必须获得更多的糖果」这句话拆分为两个规则，分别处理。
+
+    左规则：当 ratings[i−1]<ratings[i] 时，i 号学生的糖果数量将比 i−1 号孩子的糖果数量多。
+
+    右规则：当 ratings[i]>ratings[i+1] 时，i 号学生的糖果数量将比 i+1 号孩子的糖果数量多。
+
+    我们遍历该数组两次，处理出每一个学生分别满足左规则或右规则时，最少需要被分得的糖果数量。每个人最终分得的糖果数量即为这两个数量的最大值。
+
+    具体地，以左规则为例：我们从左到右遍历该数组，假设当前遍历到位置 i，如果有 ratings[i−1]<ratings[i] 那么 i 号学生的糖果数量将比 i−1 号孩子的糖果数量多，我们令 left[i]=left[i−1]+1 即可，否则我们令 left[i]=1。
+
+    在实际代码中，我们先计算出左规则 left 数组，在计算右规则的时候只需要用单个变量记录当前位置的右规则，同时计算答案即可。
+
+.. literalinclude:: code/分发糖果.cpp
+    :language: cpp
+
