--- a/数据结构与算法/leecode/刷题记录.rst
+++ b/数据结构与算法/leecode/刷题记录.rst
@@ -572,5 +572,71 @@ leetcode: https://leetcode.cn/problems/product-of-array-except-self/description/
 .. literalinclude:: code/除自身以外数组的乘积.cpp
     :language: cpp
 
+罗马数字转整数
+--------------------------------
+罗马数字包含以下七种字符: I， V， X， L，C，D 和 M。
+
+| 字符          数值
+| I             1
+| V             5
+| X             10
+| L             50
+| C             100
+| D             500
+| M             1000
+| 例如， 罗马数字 2 写做 II ，即为两个并列的 1 。12 写做 XII ，即为 X + II 。 27 写做  XXVII, 即为 XX + V + II 。
+
+通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况：
+
+| I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。
+| X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。 
+| C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
+
+给定一个罗马数字，将其转换成整数。
+
+.. tip::
+
+    通常情况下，罗马数字中小的数字在大的数字的右边。若输入的字符串满足该情况，那么可以将每个字符视作一个单独的值，累加每个字符对应的数值即可。
+
+    例如 XXVII 可视作 X+X+V+I+I=10+10+5+1+1=27。
+
+    若存在小的数字在大的数字的左边的情况，根据规则需要减去小的数字。对于这种情况，我们也可以将每个字符视作一个单独的值，若一个数字右侧的数字比它大，则将该数字的符号取反。
+
+    例如 XIV 可视作 X−I+V=10−1+5=14。
+
+
+.. literalinclude:: code/罗马数字转整数.cpp
+    :language: cpp
+
+
+整数转罗马数字
+-----------------------------------
+七个不同的符号代表罗马数字，其值如下：
+
+| 字符          数值
+| I             1
+| V             5
+| X             10
+| L             50
+| C             100
+| D             500
+| M             1000
+
+罗马数字是通过添加从最高到最低的小数位值的转换而形成的。将小数位值转换为罗马数字有以下规则：
+
+* 如果该值不是以 4 或 9 开头，请选择可以从输入中减去的最大值的符号，将该符号附加到结果，减去其值，然后将其余部分转换为罗马数字。
+* 如果该值以 4 或 9 开头，使用 减法形式，表示从以下符号中减去一个符号，例如 4 是 5 (V) 减 1 (I): IV ，9 是 10 (X) 减 1 (I)：IX。仅使用以下减法形式：4 (IV)，9 (IX)，40 (XL)，90 (XC)，400 (CD) 和 900 (CM)。
+* 只有 10 的次方（I, X, C, M）最多可以连续附加 3 次以代表 10 的倍数。你不能多次附加 5 (V)，50 (L) 或 500 (D)。如果需要将符号附加4次，请使用 减法形式。
+
+给定一个整数，将其转换为罗马数字。
+
+.. tip::
+
+    根据罗马数字的唯一表示法，为了表示一个给定的整数 num，我们寻找不超过 num 的最大符号值，将 num 减去该符号值，然后继续寻找不超过 num 的最大符号值，将该符号拼接在上一个找到的符号之后，循环直至 num 为 0。最后得到的字符串即为 num 的罗马数字表示。
+
+    编程时，可以建立一个数值-符号对的列表 valueSymbols，按数值从大到小排列。遍历 valueSymbols 中的每个数值-符号对，若当前数值 value 不超过 num，则从 num 中不断减去 value，直至 num 小于 value，然后遍历下一个数值-符号对。若遍历中 num 为 0 则跳出循环。
+
+.. literalinclude:: code/整数转罗马数字.cpp
+    :language: cpp
 
 
