--- a/数据结构与算法/leecode/贪心算法.rst
+++ b/数据结构与算法/leecode/贪心算法.rst
@@ -73,3 +73,76 @@ n 个孩子站成一排。给你一个整数数组 ratings 表示每个孩子的
 .. literalinclude:: code/分发糖果.cpp
     :language: cpp
 
+
+文本左右对齐
+-----------------------
+给定一个单词数组 words 和一个长度 maxWidth ，重新排版单词，使其成为每行恰好有 maxWidth 个字符，且左右两端对齐的文本。
+
+你应该使用 “贪心算法” 来放置给定的单词；也就是说，尽可能多地往每行中放置单词。必要时可用空格 ' ' 填充，使得每行恰好有 maxWidth 个字符。
+
+要求尽可能均匀分配单词间的空格数量。如果某一行单词间的空格不能均匀分配，则左侧放置的空格数要多于右侧的空格数。
+
+文本的最后一行应为左对齐，且单词之间不插入额外的空格。
+
+注意:
+
+单词是指由非空格字符组成的字符序列。
+每个单词的长度大于 0，小于等于 maxWidth。
+输入单词数组 words 至少包含一个单词。
+ 
+.. code-block:: text
+
+    示例 1:
+
+    输入: words = ["This", "is", "an", "example", "of", "text", "justification."], maxWidth = 16
+    输出:
+    [
+    "This    is    an",
+    "example  of text",
+    "justification.  "
+    ]
+
+    示例 2:
+
+    输入:words = ["What","must","be","acknowledgment","shall","be"], maxWidth = 16
+    输出:
+    [
+    "What   must   be",
+    "acknowledgment  ",
+    "shall be        "
+    ]
+    解释: 注意最后一行的格式应为 "shall be    " 而不是 "shall     be",
+        因为最后一行应为左对齐，而不是左右两端对齐。       
+        第二行同样为左对齐，这是因为这行只包含一个单词。
+
+    示例 3:
+
+    输入:words = ["Science","is","what","we","understand","well","enough","to","explain","to","a","computer.","Art","is","everything","else","we","do"]，maxWidth = 20
+    输出:
+    [
+    "Science  is  what we",
+    "understand      well",
+    "enough to explain to",
+    "a  computer.  Art is",
+    "everything  else  we",
+    "do                  "
+    ]
+
+.. tip:: 
+
+    根据题干描述的贪心算法，对于每一行，我们首先确定最多可以放置多少单词，这样可以得到该行的空格个数，从而确定该行单词之间的空格个数。
+
+    根据题目中填充空格的细节，我们分以下三种情况讨论：
+
+    当前行是最后一行：单词左对齐，且单词之间应只有一个空格，在行末填充剩余空格；
+    当前行不是最后一行，且只有一个单词：该单词左对齐，在行末填充空格；
+    当前行不是最后一行，且不只一个单词：设当前行单词数为 numWords，空格数为 numSpaces，我们需要将空格均匀分配在单词之间，则单词之间应至少有
+
+    avgSpaces=numSpaces/(numWords−1)向下取整个空格，对于多出来的
+    extraSpaces=numSpacesmod(numWords−1)
+    个空格，应填在前 extraSpaces 个单词之间。因此，前 extraSpaces 个单词之间填充 avgSpaces+1 个空格，其余单词之间填充 avgSpaces 个空格。
+
+.. literalinclude:: code/文本左右对齐.cpp
+    :language: cpp
+
+
