--- a/数据结构与算法/leecode/双指针.rst
+++ b/数据结构与算法/leecode/双指针.rst
@@ -219,6 +219,37 @@
             return vector<int>({array[ret.first], array[ret.second]});
     }
 
+两数之和
+------------------------
+leetcode: https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/description/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个下标从 1 开始的整数数组 numbers ，该数组已按 非递减顺序排列  ，请你从数组中找出满足相加之和等于目标数 target 的两个数。如果设这两个数分别是 numbers[index1] 和 numbers[index2] ，则 1 <= index1 < index2 <= numbers.length 。
+
+以长度为 2 的整数数组 [index1, index2] 的形式返回这两个整数的下标 index1 和 index2。
+
+你可以假设每个输入 只对应唯一的答案 ，而且你 不可以 重复使用相同的元素。
+
+你所设计的解决方案必须只使用常量级的额外空间。
+
+.. literalinclude:: ./code/两数之和.cpp
+    :language: cpp
+
+
+三数之和
+----------------------------------
+leetcode: https://leetcode.cn/problems/3sum/description/?envType=study-plan-v2&envId=top-interview-150
+
+给你一个整数数组 nums ，判断是否存在三元组 [nums[i], nums[j], nums[k]] 满足 i != j、i != k 且 j != k ，同时还满足 nums[i] + nums[j] + nums[k] == 0 。请你返回所有和为 0 且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+.. tip::
+
+    | 排序 + 双指针
+
+.. literalinclude:: ./code/三数之和.cpp
+    :language: cpp
+
 
 和为s的连续正数序列
 ---------------------------------------
@@ -382,3 +413,41 @@ leetcode: https://leetcode.cn/problems/trapping-rain-water/description/?envType=
 
 .. literalinclude:: ./code/接雨水.cpp
     :language: cpp
+
+
+判断子序列
+----------------------------------
+leetcode: https://leetcode.cn/problems/is-subsequence/description/?envType=study-plan-v2&envId=top-interview-150
+
+给定字符串 s 和 t ，判断 s 是否为 t 的子序列。
+
+字符串的一个子序列是原始字符串删除一些（也可以不删除）字符而不改变剩余字符相对位置形成的新字符串。（例如，"ace"是"abcde"的一个子序列，而"aec"不是）。
+
+.. tip::
+
+    | 我们初始化两个指针 i 和 j，分别指向 s 和 t 的初始位置。每次贪心地匹配，匹配成功则 i 和 j 同时右移，
+    | 匹配 s 的下一个位置，匹配失败则 j 右移，i 不变，尝试用 t 的下一个字符匹配 s。
+    | 最终如果 i 移动到 s 的末尾，就说明 s 是 t 的子序列。
+
+.. literalinclude:: ./code/判断子序列.cpp
+    :language: cpp
+
+
+
+盛最多水的容器
+----------------------------------
+leetcode: https://leetcode.cn/problems/container-with-most-water/description/?envType=study-plan-v2&envId=top-interview-150
+
+给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。
+
+找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
+
+返回容器可以储存的最大水量。
+
+说明：你不能倾斜容器。
+
+.. literalinclude:: ./code/盛最多水的容器.cpp
+    :language: cpp
+
+
+
